# agnolotti

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  app.py  compose.yaml  pyproject.toml  requirements.txt
.do/: app.yaml
agents/: __init__.py  assistant.py
db/: session.py  url.py
scripts/: do-deploy.ps1  do-deploy.sh  do-logs.ps1  do-logs.sh  do-teardown.ps1  do-teardown.sh  entrypoint.sh
tests/: test_agent.py
